name:           c-expansion
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         Pradd <pradd@tut.by>
category:       Game

executable c-expansion
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   bytestring,
                   mtl,
                   happstack-state,
                   HStringTemplate,
                   random,
                   utf8-string,
                   happstack-server
  ghc-options:     -Wall

