name:           c-expansion
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         Pradd <pradd@tut.by>
category:       Game

executable c-expansion
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   random
  ghc-options:     -Wall

